cmake_minimum_required(VERSION 3.21)
project(project1 C)

set(CMAKE_C_STANDARD 90)
set(CMAKE_C_FLAGS "-fexec-charset=CP949")

add_executable(project1 main.c exam2-3.h exam2-3.c 3-1.c 3-3.c 3-4.c 3-5.c 3-6.c 3-7.c 3-8.c 3-9.c 3-10.c 3-11.c 3-12.c 3-13.c 3-14.c 3-15.c 3-16.c 3-18.c example3-1.c example3-2.c 4-3.c 4-5.c 4-6.c 4-7.c 4-10.c)
