cmake_minimum_required(VERSION 3.21)
project(project1 C)

set(CMAKE_C_STANDARD 90)
set(CMAKE_C_FLAGS "-fexec-charset=CP949")

add_executable(project1 main.c chapter2/exam2-3.h chapter2/exam2-3.c chapter3/3-1.c chapter3/3-3.c chapter3/3-4.c chapter3/3-5.c chapter3/3-6.c chapter3/3-7.c chapter3/3-8.c chapter3/3-9.c chapter3/3-10.c chapter3/3-11.c chapter3/3-12.c chapter3/3-13.c chapter3/3-14.c chapter3/3-15.c chapter3/3-16.c chapter3/3-18.c chapter3/example3-1.c chapter3/example3-2.c chapter4/4-3.c chapter4/4-5.c chapter4/4-6.c chapter4/4-7.c chapter4/4-10.c chapter4/4-19.c chapter5/5-1.c chapter5/5-2.c chapter5/5-5.c chapter5/5-8.c chapter5/5-13.c chapter5/5-13_1.c chapter5/5-14.c chapter5/exam5-1.c chapter5/exam5-2.c chapter5/exam5-3.c)
